--- a/nightly.conf
+++ b/nightly.conf
@@ -11,3 +11,4 @@ nightly_branches="$nightly_branches drm-upstream/drm-next"
 nightly_branches="$nightly_branches origin/topic/atomic-core"
 nightly_branches="$nightly_branches sound-upstream/for-next"
 nightly_branches="$nightly_branches origin/topic/drm-misc"
+nightly_branches="$nightly_branches origin/topic/drm-fixes"
