--- a/nightly.conf
+++ b/nightly.conf
@@ -13,3 +13,4 @@ nightly_branches="$nightly_branches sound-upstream/for-next"
 nightly_branches="$nightly_branches origin/topic/drm-misc"
 nightly_branches="$nightly_branches origin/topic/drm-fixes"
 nightly_branches="$nightly_branches origin/topic/bxt-stage1"
+nightly_branches="$nightly_branches origin/topic/atomic-conversion"
