Add drm-misc topic/backlight_for_lag to nightly.conf

--- a/nightly.conf
+++ b/nightly.conf
@@ -88,4 +88,5 @@ drm_tip_config=(
 	"drm-misc		topic/hdcp"
 	"drm-misc		topic/hdcp"
 	"drm-misc		backlight_for_lag"
+	"drm-misc		topic/backlight_for_lag"
 ) # DO NOT CHANGE THIS LINE
