--- a/nightly.conf
+++ b/nightly.conf
@@ -87,4 +87,5 @@ drm_tip_config=(
 	"sound-upstream		for-linus"
 	"sound-upstream		for-next"
 	"drm-intel		topic/core-for-CI"
+	"drm-intel		topic/drmp-cleanup"
 ) # DO NOT CHANGE THIS LINE
