--- a/nightly.conf
+++ b/nightly.conf
@@ -88,4 +88,5 @@ drm_tip_config=(
 	"sound-upstream		for-next"
 	"drm-intel		topic/core-for-CI"
 	"drm-intel		topic/drmp-cleanup"
+	"drm-intel		topic/drmp-cleanup-v2"
 ) # DO NOT CHANGE THIS LINE
