nightly.conf: add drm-intel-next to drm-tip branches
Prepare for switching from drm-intel-next-queued to
drm-intel-next. Adding drm-intel-next to drm_tip_config removes the need
for a bunch of special casing in dim. Since din is always a direct
parent of dinq, there should never be conflicts here.

Acked-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Signed-off-by: Jani Nikula <jani.nikula@intel.com>

--- a/nightly.conf
+++ b/nightly.conf
@@ -82,6 +82,7 @@ drm_tip_config=(
 
 	"drm-misc		drm-misc-next"
 	"drm-intel		drm-intel-next-queued"
+	"drm-intel		drm-intel-next"
 	"drm-amd		drm-amd-next"
 
 	"sound-upstream		for-linus"
